fixing image iOS hero image stretch bug - 3

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,6 +11,8 @@
   display: flex;
   flex-direction: row;
   max-width: 100%;
+  align-self: flex-start;
+
 }
 
 /* ---------------------------------------------------- Header  */
